# px4-attack-simulator

./: .gitignore  README.md  build.sh  launch.sh  meson.build
plugins/: custom_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp
scripts/: app.py  command.cpp  modify_world.py
